[project]
name = "blue-light-aware-color-constancy"
version = "0.1.0"
description = "a poetry environment"
authors = [
    {name = "yuhengsu1207@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy (>=2.2.6,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
isort = "^6.0.1"
notebook = "^7.4.2"
ipykernel = "^6.29.5"
