[project]
name = "blue-light-aware-color-constancy"
version = "0.1.0"
description = "a poetry environment"
authors = [
    {name = "yuhengsu1207@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "numpy (>=2.2.6,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "colour-science (>=0.4.6,<0.5.0)",
    "scipy (>=1.15.3,<2.0.0)",
    "scikit-image (>=0.25.2,<0.26.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "joblib (>=1.5.1,<2.0.0)"
]

[tool.poetry]
packages = [
    { include = "img_transform_temp", from = "src" },
    { include = "image_optimization", from = "src" },
    { include = "guided_filter", from = "src/image_optimization/baseline" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
isort = "^6.0.1"
notebook = "^7.4.2"
ipykernel = "^6.29.5"
